// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metricsOperation can enhance async operationFunction inherit meta.segment passed to req.meta from previous middleware and metrics them 1`] = `
Array [
  Array [
    "operation.operationFunction.segment.mock-segment.state.start",
    1,
  ],
  Array [
    "operation.operationFunction.segment.mock-segment.state.success",
    1,
  ],
]
`;

exports[`metricsOperation can enhance async operationFunction to invoke operationFunction with operationFunction name in req.meta.operation 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`metricsOperation can enhance async operationFunction to metrics operaitonFunction on success 1`] = `
Array [
  Array [
    "operation.operationFunction.segment.undefined.state.start",
    1,
  ],
  Array [
    "operation.operationFunction.segment.undefined.state.success",
    1,
  ],
]
`;

exports[`metricsOperation can enhance async operationFunction to metrics operationFunction name as operation name 1`] = `
Array [
  Array [
    "operation.operationFunction.segment.undefined.state.start",
    1,
  ],
  Array [
    "operation.operationFunction.segment.undefined.state.success",
    1,
  ],
]
`;

exports[`metricsOperation can enhance async operationFunction to metrics operationFunction on failure and throw the caught error 1`] = `
Array [
  Array [
    "operation.operationFunction.segment.undefined.state.start",
    1,
  ],
  Array [
    "operation.operationFunction.segment.undefined.state.failure.category.undefined.type.undefined",
    1,
  ],
]
`;

exports[`metricsOperation can enhance sync operationFunction inherit meta.segment passed to req.meta from previous middleware and metrics them 1`] = `
Array [
  Array [
    "operation.operationFunction.segment.mock-segment.state.start",
    1,
  ],
]
`;

exports[`metricsOperation can enhance sync operationFunction to invoke operationFunction with operationFunction name in req.meta.operation 1`] = `
Array [
  Array [
    Object {
      "operation": "operationFunction",
    },
  ],
]
`;

exports[`metricsOperation can enhance sync operationFunction to metrics operaitonFunction on success 1`] = `
Array [
  Array [
    "operation.operationFunction.segment.undefined.state.start",
    1,
  ],
]
`;

exports[`metricsOperation can enhance sync operationFunction to metrics operationFunction name as operation name 1`] = `
Array [
  Array [
    "operation.operationFunction.segment.undefined.state.start",
    1,
  ],
]
`;

exports[`metricsOperation can enhance sync operationFunction to metrics operationFunction on failure and throw the caught error 1`] = `
Array [
  Array [
    "operation.operationFunction.segment.undefined.state.start",
    1,
  ],
  Array [
    "operation.operationFunction.segment.undefined.state.failure.category.undefined.type.undefined",
    1,
  ],
]
`;

exports[`metricsOperation throw Error if metrics instance was not set 1`] = `[Error: auto metrics instance needs to be initialised]`;
